<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Base.Theme.AppCompat.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/helpPage.stepText"
            android:layout_marginTop="0dp"
            android:text="@string/guide_select_source_language_and_translation_destination_language"/>

        <ImageView
            style="@style/helpPage.stepPictureLite"
            android:src="@drawable/guide_lite_step1_select_language"/>

        <TextView
            style="@style/helpPage.stepText"
            android:text="@string/guide_click_selection_button"/>

        <ImageView
            style="@style/helpPage.stepPictureLite"
            android:src="@drawable/guide_lite_step2_click_selection_button"/>

        <TextView
            style="@style/helpPage.stepText"
            android:text="@string/guide_tap_and_drag_on_screen_to_create_selection_area_for_translation"/>

        <TextView
            style="@style/helpPage.stepText"
            android:text="@string/guide_click_translation_button"/>

        <ImageView
            style="@style/helpPage.stepPictureLite"
            android:src="@drawable/guide_lite_step4_click_translation_button"/>

        <TextView
            style="@style/helpPage.stepText"
            android:text="@string/guide_get_the_result"/>

        <ImageView
            style="@style/helpPage.stepPictureLite"
            android:src="@drawable/guide_lite_step5_get_the_result"/>

        <TextView
            style="@style/helpPage.stepText"
            android:text="@string/guide_menu"/>

        <ImageView
            style="@style/helpPage.stepPictureLite"
            android:layout_height="200dp"
            android:src="@drawable/guide_lite_step7_menu"/>

    </LinearLayout>

</ScrollView>